# superADMM

./: .gitignore  AdvancedOptions.md  MANIFEST.in  PatchNotes.md  README.md  buildfile.m  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build_wheels.yml  test_matlab.yml
matlab/: Test_Problem.m  compile.m  getDefaultSettings.m  getSuperADMMopts.m  setup.m  superADMM.m  superADMM_getOpts.m  superADMM_preCompute.m  superADMM_setup.m
python/: example.py  superADMM.py
python/qpbenchmark/: solver_settings.py
python/qpsolvers/: __init__.py  superadmm_.py
src/: ccBlas.c  ccBlas.h  csparse.c  csparse.h  ldl.c  ldl.h  superADMM.c  superADMM.h  superADMM_mex.c
src/Experimental/: BKLDL_mex.c  BK_ldl.c  BK_ldl.h  BKcompile.m  README.md  testBK.m
src/superADMM.egg-info/: PKG-INFO  SOURCES.txt
superADMM/: __init__.py  pysuperADMM.pyx
