[build-system]
requires = [
    "setuptools>=82.0.0",
    "wheel",
    "Cython>=3.0",
    "numpy>=2.0.2",
    "scipy_openblas64"
]

[project]
name = "superADMM"
version = "0.7.0"
description = "Quadratic Programming solver using a superlinear ADMM method"
readme = "README.md"
dependencies = ["numpy>=1.26", "scipy>=1.10"]
requires-python = ">=3.9"
authors = [
    { name = "Peter Verheijen" }
]
license = "LGPL2.0"

[project.urls]
Homepage = "https://github.com/Petrus1904/superADMM"

[tool.cibuildwheel]
# Skip 32-bit builds
skip = ["*-win32", "*-manylinux_i686", "cp39-musllinux_aarch64"]
# Trigger an install of the package, but run nothing of note
test-command = "python python/example.py"
test-sources = ["python"]
